Ch02-05.베지어 곡선 모델로 부드러운 애니메이션 적용(cubic-bezier)

--- a/Ch02_404 에러 페이지/index.css
+++ b/Ch02_404 에러 페이지/index.css
@@ -85,6 +85,7 @@ body {
 #planet_1 {
   animation-name: rotation;
   animation-duration: 3s;
+  animation-timing-function: linear;
   animation-iteration-count: infinite;
   transform-box: fill-box;
   transform-origin: center;
@@ -117,6 +118,7 @@ body {
 #alien_hand-L,
 #alien_hand-R {
   animation: shakingUpAndDown 1s infinite;
+  animation-timing-function: cubic-bezier(0.18, 0.82, 0.63, -0.04);
 }
 #number-0-soaking {
   animation: soaking 2s;
