--- a/Ch03_FireWatch/index.css
+++ b/Ch03_FireWatch/index.css
@@ -43,3 +43,38 @@ header {
   min-width: 1000px;
   overflow: hidden;
 }
+
+#main-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+#document-title {
+  color: #b8e1ee;
+  font-size: 170%;
+  font-weight: 300;
+  letter-spacing: 10px;
+  margin-bottom: 40px;
+}
+
+.mountain-content-wrpper {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+#mountain-tag-wrapper {
+  display: flex;
+  font-size: 18px;
+  font-weight: 700;
+  gap: 50px;
+}
+.mountain-content-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 325px;
+  height: 32px;
+  background-color: #b8e1ee;
+  color: #04120c;
+}
