Ch-3 - 05 클릭으로 특정 위치 이동하기 (2)

--- a/Ch03_FireWatch/index.css
+++ b/Ch03_FireWatch/index.css
@@ -1,5 +1,10 @@
 @import url("../reset.css");
 
+html {
+  /* 스크롤 동작 부드럽게 */
+  /* scroll-behavior: smooth; */
+}
+
 body {
   height: 200vh;
   background-color: #00110c;
