--- a/Ch04_카카오 인재영입 페이지/index.css
+++ b/Ch04_카카오 인재영입 페이지/index.css
@@ -88,3 +88,52 @@ main {
   right: -80px;
   transform: translate(80px, -13px) rotate(23deg);
 }
+
+#white-wrapper {
+  position: relative;
+  background-color: #f7f7f7;
+  height: 1000px;
+  z-index: 10000;
+  padding-top: 80px;
+}
+
+#slider-container {
+  margin: 0 auto;
+  position: relative;
+  width: 300px;
+}
+#slider-content-wrapper {
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory; /* snap 할 컨테이너에 */
+}
+/* 좌우 스크롤바 없애기 */
+#slider-content-wrapper::-webkit-scrollbar {
+  width: 0;
+}
+
+#slider-content {
+  display: flex;
+}
+.slider-image {
+  width: 300px;
+  scroll-snap-align: center; /* snap 할 아이템에 */
+}
+.slider-button {
+  position: absolute;
+  bottom: -110px;
+  font-size: 40px;
+  cursor: pointer;
+}
+#left-button {
+  left: 10px;
+}
+#right-button {
+  right: 10px;
+}
+#slider-index {
+  position: absolute;
+  bottom: -100px;
+  left: 50%;
+  transform: translateX(-50%);
+}
