--- a/Ch05_넥스트 레벨 페어즈/index.css
+++ b/Ch05_넥스트 레벨 페어즈/index.css
@@ -110,3 +110,61 @@ body {
   font-weight: 800;
   letter-spacing: normal;
 }
+.header {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
+}
+.circle {
+  position: absolute;
+  display: inline-block;
+  width: 350px;
+  height: 350px;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  border-radius: 50%;
+}
+
+#circle-1 {
+  top: -100px;
+  left: -130px;
+}
+#circle-2 {
+  bottom: 5vh;
+  right: -230px;
+}
+.cube_image {
+  position: absolute;
+  opacity: 0.5;
+}
+#cube_image_1 {
+  top: 15%;
+  left: 15%;
+  width: 15%;
+}
+#cube_image_2 {
+  top: 55%;
+  left: 15%;
+  width: 20%;
+}
+#cube_image_3 {
+  top: 20%;
+  left: 70%;
+  width: 13%;
+}
+#cube_image_4 {
+  top: 60%;
+  left: 70%;
+  width: 20%;
+}
+
+.header_title {
+  position: absolute;
+  top: 30vh;
+  width: 100%;
+  font-size: 7.5rem;
+  font-weight: 400;
+  line-height: 8.625rem;
+  color: rgb(213, 165, 78);
+  text-align: center;
+}
