Ch01 - 06 SVG 필터 입히기

--- a/Part2-Canvas/Ch01_캔버스 파티클 다루기 심플예제/index.css
+++ b/Part2-Canvas/Ch01_캔버스 파티클 다루기 심플예제/index.css
@@ -6,5 +6,7 @@ body {
 }
 
 canvas {
-  background-color: #f1f1f1;
+  /* gooey 이펙트 */
+  /* filter: blur(50px) contrast(50); */
+  filter: url("#gooey");
 }
