--- a/Part2-Canvas/Ch07_React/src/style/index.css
+++ b/Part2-Canvas/Ch07_React/src/style/index.css
@@ -60,7 +60,6 @@ body {
   border: var(--border02);
   flex-grow: 1;
 }
-
 .section-2 {
   background-color: var(--color-text);
   margin: 1rem 0;
@@ -71,4 +70,81 @@ body {
   justify-content: center;
   font-size: 5rem;
   letter-spacing: -0.5;
+}
+.section-3 {
+  min-height: 50rem;
+  display: flex;
+  border-top: var(--border01);
+  border-bottom: var(--border01);
+}
+.section-3 > aside {
+  width: 40%;
+  border-right: var(--border01);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.section-3 > aside > .top {
+  font-size: 5rem;
+  padding: 2rem 0 2rem 1rem;
+  letter-spacing: -0.2rem;
+}
+.section-3 > aside > .bottom {
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.section-3 > aside > .bottom > img:nth-last-child(1) {
+  transform: scaleX(-1);
+}
+.section-3 > article {
+  width: 60%;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  padding: 0 3rem;
+  line-height: 1.3;
+}
+.section-4 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+  padding: 5rem;
+}
+.section-4 > canvas {
+  width: 50vmin;
+  height: 50vmin;
+  border-radius: 50%;
+  box-shadow: inset 0 0 5px 5px rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.02);
+}
+.section-4 > aside {
+  width: 50vmin;
+}
+.section-4 > aside > h1 {
+  font-size: 4rem;
+  margin-bottom: 0.5rem;
+}
+.section-4 > aside > h2 {
+  font-size: 3rem;
+  margin-bottom: 2rem;
+}
+.section-4 > aside > p {
+  font-size: 1.2rem;
+  line-height: 1.4;
+}
+footer {
+  min-height: 75vh;
+  background-color: var(--color-text);
+  color: #fff;
+  position: relative;
+}
+footer > .email {
+  position: absolute;
+  font-size: 12vmin;
+  bottom: 2rem;
+  right: 2rem;
 }
